objects/Account_Attachment__c.object
<CustomObject>
    <description>This object is used to link attachments with restricted access to an Account. (Users who have access to the account may should not have access to related attachments.)</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Attachment</relationshipLabel>
        <relationshipName>Attachment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Attachment_Id__c</fullName>
        <description>Contains Id of related attachment</description>
        <label>Attachment Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attachment_Name__c</fullName>
        <description>Contains the name of related attachment.</description>
        <label>Attachment Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_Action__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp; Id,IMAGE(&quot;/img/icon/tasks16.gif&quot;,&quot;View&quot;),&quot;_parent&quot;) &amp; &quot; &quot; &amp; HYPERLINK(&quot;/servlet/servlet.FileDownload?file=&quot; &amp; Attachment_Id__c, IMAGE(&quot;/servlet/servlet.FileDownload?file=015M00000000kFK&quot;,&quot;Download&quot;), &quot;_blank&quot;) &amp; &quot; &quot; &amp; HYPERLINK(&quot;/apex/ExtUploadSensitiveAttachment?upload=true&amp;id=&quot; &amp; Id , IMAGE(&quot;/servlet/servlet.FileDownload?file=015M00000000kFP&quot;,&quot;Upload&quot;), &quot;_blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>File Action</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp; Id, Attachment_Name__c, &quot;_parent&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Open_Attachment__c</fullName>
        <formula>HYPERLINK(&quot;/servlet/servlet.FileDownload?file=&quot; &amp; Attachment_Id__c, Attachment_Name__c, &quot;_blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Open Attachment</label>
        <type>Text</type>
    </fields>
    <label>Attachment</label>
    <nameField>
        <displayFormat>Att-{000000}</displayFormat>
        <label>Account Attachment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Attachments</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>